fixing line height for better spacing on new blocknt

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -227,7 +227,7 @@ header {
 }
 p {
   margin: 15px 0;
-  line-height: 1.2;
+  line-height: 1.3;
 }
 ol {
   list-style-type: decimal;
